--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -112,7 +112,7 @@
 
                     <p:panel id="admObjects" header="#{bundle.Administation}" 
                              rendered="#{sessionBean.userAdmin}"
-                             toggleable="true" styleClass="dash-panel without-spaces ">
+                             toggleable="true" styleClass="dash-panel">
                         <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces " >
                             <p:commandLink value="#{bundle.Users}"
                                            onstart="return isClose = 1;"
