--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -86,7 +86,7 @@
 
                                 <p:commandButton icon="ui-icon-gear" title="#{bundle.Generate}"
                                                  disabled="#{_bean.isReadOnly() or !_bean.canRegistred}"
-                                                 action="#{_bean.onGenerateRegNumber(_item)}"
+                                                 actionListener="#{_bean.onGenerateRegNumber(_item)}"
                                                  update="docTypePanel datePanel сompanyPanel regNumberPanel"/>
                                 <p:commandButton id="clearNumberBtn"
                                                  icon="ui-icon-close" title="#{bundle.UnRegistred}"
